# GhostPost

./: db.sqlite3  pyproject.toml
ghostapp/: admin.py  forms.py  models.py  urls.py  views.py
ghostapp/migrations/: 0001_initial.py
ghostpost/: settings.py  urls.py
templates/: index.html
