[tool.poetry]
name = "ghostpost"
version = "0.1.0"
description = ""
authors = ["Cedric Mulvihill <cedric.mulvihill@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^2.2.9"

[tool.poetry.dev-dependencies]
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
